# personal_os

./: .gitignore  README.md  pyproject.toml
goal-generator/: README.md  SKILL.md
goal-generator/references/templates/: ab-test-setup.md  api-contract.md  changelog-release.md  ci-fix.md  code-refactor.md  custom.md  data-pipeline.md  dependency-bump.md  docs-sync.md  feature-add.md  incident-repro.md  linear-ticket.md  migration.md  perf-regression.md  poc-branch.md  rollout-gate.md  security-patch.md  sla-audit.md  test-stabilization.md  ux-validation.md
goal-generator/scripts/: generate-goal.sh  validate_goal.py
hermes/: SKILL.spec_quarterback.md  SKILL.spec_refiner.md
spec_quarterback/: __init__.py  __main__.py  cli.py
spec_quarterback/lib/: __init__.py  api.py  constitution.py  constraints.py  contract.py  critic.py  data_model.py  decompose.py  expand.py  generator.py  improve.py  json_extract.py  llm.py  refiner.py  spec_store.py  templates_loader.py  text.py
spec_quarterback/lib/prompts/: __init__.py  generation.py  refinement.py
spec_quarterback/lib/schemas/: __init__.py  _heal.py  constitution.py  contract.py  data_model.py  design.py  feature_plan.py  requirements.py  schema_flatten.py  spec.py  tasks.py  verdict.py
spec_quarterback/lib/templates_data/critic/: prd_fidelity_prompt.md  spec_quality_checklist.json  spec_quality_reviewer_prompt.md
spec_quarterback/lib/templates_data/skeleton/: constitution.md  design.md  requirements.md  tasks.md
