[project]
name = "spec-quarterback"
version = "3.0.0"
description = "Decompose a PRD into per-feature SDD specs + critic-driven refinement."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
spec-quarterback = "spec_quarterback.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `packages` ships every file under the package dir, including the
# templates_data fallback (skeleton + critic rubric) the loader resolves via
# importlib.resources. No force-include: hatchling >=1.19 errors on the
# duplicate archive paths it would create.
packages = ["spec_quarterback"]
